ecmascript/parser/tests/test262-error-references/fail/1976350e287d5156.js.stderr
error: Expected {, got +
 --> $DIR/tests/test262-parser/fail/1976350e287d5156.js:1:19
  |
1 | class A extends a + b {}
  |                   ^

